// Schema Prisma pentru Platforma Audit Servere
// Configurare generator si sursa date

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-arm64-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ==================== AUTENTIFICARE SI UTILIZATORI ====================

model User {
  id            String          @id @default(uuid())
  email         String          @unique
  passwordHash  String
  firstName     String?
  lastName      String?
  roleId        String
  role          Role            @relation(fields: [roleId], references: [id])
  permissions   Permission[]
  refreshTokens RefreshToken[]
  auditLogs     AuditLog[]
  templates     Template[]      @relation("TemplateCreator")
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt

  @@map("users")
}

model Role {
  id          String   @id @default(uuid())
  name        String   @unique // ADMIN, AUDITOR, VIEWER
  description String?
  permissions String[] // lista capabilitati globale
  users       User[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@map("roles")
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userAgent String?
  ipAddress String?
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
  @@index([expiresAt])
  @@map("refresh_tokens")
}

// ==================== SERVER SI AGENT ====================

model Server {
  id                 String              @id @default(uuid())
  name               String
  hostname           String
  ipAddress          String?
  description        String?
  status             ServerStatus        @default(PENDING)
  agentIdentity      AgentIdentity?
  permissions        Permission[]
  inventorySnapshots InventorySnapshot[]
  metricSamples      MetricSample[]
  auditRuns          AuditRun[]
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt

  @@map("servers")
}

model AgentIdentity {
  id          String    @id @default(uuid())
  serverId    String    @unique
  server      Server    @relation(fields: [serverId], references: [id], onDelete: Cascade)
  enrollToken String?   @unique
  agentToken  String?   @unique // token pentru comunicare continua
  version     String?
  osInfo      String?
  lastSeen    DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@map("agent_identities")
}

model Permission {
  id           String    @id @default(uuid())
  userId       String
  user         User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  serverId     String
  server       Server    @relation(fields: [serverId], references: [id], onDelete: Cascade)
  capabilities String[] // vizualizare, rulare audit, generare raport, acces ssh
  expiresAt    DateTime? // pentru JIT access
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  @@unique([userId, serverId])
  @@map("permissions")
}

// ==================== SABLOANE SI CONTROALE ====================

model Template {
  id          String            @id @default(uuid())
  name        String
  description String?
  type        TemplateType
  isBuiltIn   Boolean           @default(false)
  versions    TemplateVersion[]
  createdBy   String?
  creator     User?             @relation("TemplateCreator", fields: [createdBy], references: [id])
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  @@map("templates")
}

model TemplateVersion {
  id         String     @id @default(uuid())
  templateId String
  template   Template   @relation(fields: [templateId], references: [id], onDelete: Cascade)
  version    String
  changelog  String?
  controls   Control[]
  auditRuns  AuditRun[]
  isActive   Boolean    @default(true)
  createdAt  DateTime   @default(now())

  @@unique([templateId, version])
  @@map("template_versions")
}

model Control {
  id                String           @id @default(uuid())
  templateVersionId String
  templateVersion   TemplateVersion  @relation(fields: [templateVersionId], references: [id], onDelete: Cascade)
  controlId         String // e.g. "1.1.1"
  title             String
  category          String
  severity          Severity
  rationale         String?
  automatedChecks   AutomatedCheck[]
  manualChecks      ManualCheck[]

  @@unique([templateVersionId, controlId])
  @@map("controls")
}

model AutomatedCheck {
  id             String        @id @default(uuid())
  controlId      String
  control        Control       @relation(fields: [controlId], references: [id], onDelete: Cascade)
  checkId        String
  title          String
  description    String?
  command        String? // comanda de executare pe agent
  script         String? // script mai complex
  expectedResult String?
  checkType      String? // COMMAND, SCRIPT, FILE_CHECK, etc
  comparison     String?   @default("EQUALS") // EQUALS, CONTAINS, REGEX, NUM_EQ, NUM_GE, NUM_LE, EXIT_CODE
  parser         String?   @default("RAW") // RAW, INT, JSON, FIRST_LINE
  normalize      Json?     // Array de string-uri ["TRIM", "LOWER", "SQUASH_WS"]
  onFailMessage  String?
  platformScope  Json?     // Array de string-uri ["ubuntu", "debian"]
  checkResults   CheckResult[]

  @@unique([controlId, checkId])
  @@map("automated_checks")
}

model ManualCheck {
  id           String             @id @default(uuid())
  controlId    String
  control      Control            @relation(fields: [controlId], references: [id], onDelete: Cascade)
  checkId      String
  title        String
  description  String?
  instructions String?
  evidenceSpec EvidenceSpec?
  taskResults  ManualTaskResult[]

  @@unique([controlId, checkId])
  @@map("manual_checks")
}

model EvidenceSpec {
  id               String      @id @default(uuid())
  manualCheckId    String      @unique
  manualCheck      ManualCheck @relation(fields: [manualCheckId], references: [id], onDelete: Cascade)
  allowUpload      Boolean     @default(true)
  allowLink        Boolean     @default(true)
  allowAttestation Boolean     @default(true)
  requiresApproval Boolean     @default(false)
  acceptedFileTypes String[]   @default([])

  @@map("evidence_specs")
}

// ==================== EXECUTARE AUDIT ====================

model AuditRun {
  id                         String             @id @default(uuid())
  serverId                   String
  server                     Server             @relation(fields: [serverId], references: [id], onDelete: Cascade)
  templateVersionId          String
  templateVersion            TemplateVersion    @relation(fields: [templateVersionId], references: [id])
  status                     AuditStatus        @default(PENDING)
  triggeredBy                String?
  excludedControlIds         String[]           @default([])
  startedAt                  DateTime?
  completedAt                DateTime?
  automatedCompliancePercent Float?
  manualCompletionPercent    Float?
  overallStatus              ComplianceStatus?
  checkResults               CheckResult[]
  manualTaskResults          ManualTaskResult[]
  createdAt                  DateTime           @default(now())
  updatedAt                  DateTime           @updatedAt

  @@index([serverId])
  @@index([status])
  @@map("audit_runs")
}

model CheckResult {
  id               String         @id @default(uuid())
  auditRunId       String
  auditRun         AuditRun       @relation(fields: [auditRunId], references: [id], onDelete: Cascade)
  automatedCheckId String
  automatedCheck   AutomatedCheck @relation(fields: [automatedCheckId], references: [id])
  status           CheckStatus
  output           String?
  errorMessage     String?
  executedAt       DateTime       @default(now())

  @@unique([auditRunId, automatedCheckId])
  @@map("check_results")
}

model ManualTaskResult {
  id            String           @id @default(uuid())
  auditRunId    String
  auditRun      AuditRun         @relation(fields: [auditRunId], references: [id], onDelete: Cascade)
  manualCheckId String
  manualCheck   ManualCheck      @relation(fields: [manualCheckId], references: [id])
  status        ManualTaskStatus @default(PENDING)
  evidence      Evidence[]
  assignedTo    String?
  reviewedBy    String?
  reviewedAt    DateTime?
  reviewNotes   String?
  createdAt     DateTime         @default(now())
  updatedAt     DateTime         @updatedAt

  @@unique([auditRunId, manualCheckId])
  @@map("manual_task_results")
}

model Evidence {
  id                 String           @id @default(uuid())
  manualTaskResultId String
  manualTaskResult   ManualTaskResult @relation(fields: [manualTaskResultId], references: [id], onDelete: Cascade)
  type               EvidenceType
  filePath           String?
  fileName           String?
  fileSize           Int?
  mimeType           String?
  fileHash           String? // SHA-256
  link               String?
  attestation        String?
  uploadedBy         String
  createdAt          DateTime         @default(now())

  @@map("evidence")
}

// ==================== INVENTAR SI METRICI ====================

model InventorySnapshot {
  id        String   @id @default(uuid())
  serverId  String
  server    Server   @relation(fields: [serverId], references: [id], onDelete: Cascade)
  osInfo    Json? // distributie, versiune, kernel
  packages  Json? // lista pachete
  services  Json? // lista servicii
  ports     Json? // porturi deschise
  processes Json? // procese active
  sshConfig Json? // configurare SSH efectiva
  sysctl    Json? // valori sysctl
  firewall  Json? // reguli firewall
  users     Json? // useri sistem
  createdAt DateTime @default(now())

  @@index([serverId, createdAt])
  @@map("inventory_snapshots")
}

model MetricSample {
  id               String   @id @default(uuid())
  serverId         String
  server           Server   @relation(fields: [serverId], references: [id], onDelete: Cascade)
  cpuPercent       Float
  memUsedBytes     BigInt
  memTotalBytes    BigInt
  diskUsedBytes    BigInt
  diskTotalBytes   BigInt
  netInBytes       BigInt
  netOutBytes      BigInt
  loadAvg1         Float?
  loadAvg5         Float?
  loadAvg15        Float?
  topProcesses     Json?
  openPortsSummary Json?
  createdAt        DateTime @default(now())

  @@index([serverId, createdAt])
  @@map("metric_samples")
}

// ==================== URMARIRE VULNERABILITATI ====================

model VulnerabilityMatch {
  id                  String   @id @default(uuid())
  inventorySnapshotId String?
  packageName         String
  packageVersion      String
  cveId               String
  severity            Severity
  description         String?
  publishedAt         DateTime?
  fixedVersion        String?
  isEol               Boolean  @default(false)
  createdAt           DateTime @default(now())

  @@index([packageName])
  @@index([cveId])
  @@map("vulnerability_matches")
}

// ==================== JURNAL AUDIT ====================

model AuditLog {
  id         String   @id @default(uuid())
  userId     String?
  user       User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  action     String // CREATE, UPDATE, DELETE, LOGIN, LOGOUT, RUN_AUDIT, etc
  resource   String // User, Server, Template, AuditRun, etc
  resourceId String?
  oldValue   Json?
  newValue   Json?
  ipAddress  String?
  userAgent  String?
  createdAt  DateTime @default(now())

  @@index([userId])
  @@index([resource, resourceId])
  @@index([createdAt])
  @@map("audit_logs")
}

// ==================== ENUMS ====================

enum ServerStatus {
  PENDING
  ENROLLED
  ONLINE
  OFFLINE
  ERROR
}

enum TemplateType {
  CIS_BENCHMARK
  CIS_CONTROLS
  CUSTOM
}

enum Severity {
  CRITICAL
  HIGH
  MEDIUM
  LOW
  INFO
}

enum AuditStatus {
  PENDING
  RUNNING
  COMPLETED
  FAILED
  CANCELLED
}

enum CheckStatus {
  PASS
  FAIL
  NA
  ERROR
}

enum ManualTaskStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  REJECTED
  NOT_APPLICABLE
}

enum ComplianceStatus {
  COMPLIANT
  PARTIALLY_COMPLIANT
  NON_COMPLIANT
}

enum EvidenceType {
  UPLOAD
  LINK
  ATTESTATION
}
