@startuml diagrama_clase_audit
!theme plain
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodesep 40
skinparam ranksep 30

title Diagrama de Clase - Entitati Audit

class Template {
    id: UUID
    name: String
    description: String
    type: TemplateType
    isBuiltIn: Boolean
    --
    getVersions()
}

class TemplateVersion {
    id: UUID
    version: String
    changelog: String
    isActive: Boolean
    --
    getControls()
}

class Control {
    id: UUID
    controlId: String
    title: String
    category: String
    severity: Severity
    rationale: String
    --
    getChecks()
}

class AutomatedCheck {
    id: UUID
    checkId: String
    title: String
    command: String
    script: String
    expectedResult: String
    checkType: String
    comparison: String
    parser: String
    --
    execute()
}

class ManualCheck {
    id: UUID
    checkId: String
    title: String
    instructions: String
}

class EvidenceSpec {
    id: UUID
    allowUpload: Boolean
    allowLink: Boolean
    allowAttestation: Boolean
    requiresApproval: Boolean
    acceptedFileTypes: String[]
}

class AuditRun {
    id: UUID
    status: AuditStatus
    startedAt: DateTime
    completedAt: DateTime
    automatedCompliancePercent: Float
    manualCompletionPercent: Float
    overallStatus: ComplianceStatus
    excludedControlIds: String[]
    --
    complete()
}

class CheckResult {
    id: UUID
    status: CheckStatus
    output: String
    errorMessage: String
    executedAt: DateTime
}

class ManualTaskResult {
    id: UUID
    status: ManualTaskStatus
    assignedTo: String
    reviewedBy: String
    reviewedAt: DateTime
    reviewNotes: String
    --
    approve()
}

class Evidence {
    id: UUID
    type: EvidenceType
    filePath: String
    fileName: String
    fileSize: Int
    mimeType: String
    fileHash: String
    link: String
    attestation: String
    uploadedBy: String
}

class Server {
    id: UUID
    name: String
    hostname: String
    ipAddress: String
    status: ServerStatus
}

' Relatii - rand 1
Template "1" -- "*" TemplateVersion
TemplateVersion "1" -- "*" Control

' Relatii - rand 2
Control "1" -- "*" AutomatedCheck
Control "1" -- "*" ManualCheck
ManualCheck "1" -- "0..1" EvidenceSpec

' Relatii - rand 3
AuditRun "*" -- "1" TemplateVersion
AuditRun "*" -- "1" Server

' Relatii - rand 4
AuditRun "1" -- "*" CheckResult
AuditRun "1" -- "*" ManualTaskResult
CheckResult "*" -- "1" AutomatedCheck
ManualTaskResult "*" -- "1" ManualCheck
ManualTaskResult "1" -- "*" Evidence

@enduml
